Refactor bot structure and improve menus, shifts and weather flow